[gd_scene load_steps=2 format=3 uid="uid://cfpwe4knw5jf"]

[ext_resource type="Script" path="res://scenes/ui/template_score_hud.gd" id="1_2dl8k"]

[node name="templateScoreHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2dl8k")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HSplitContainer" type="FlowContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="Player1Label" type="Label" parent="MarginContainer2/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0
"

[node name="player2Label" type="Label" parent="MarginContainer2/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0
"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="messageLabel" type="Label" parent="MarginContainer2/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
